--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
                     <label><input type="radio" name="q3" value="Vert"> Vert</label>
                 </div>
             </div>
+            <div class="question">
+                <p>1. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            
             <button type="button" class="button" onclick="calculateScore()">Voir le résultat</button>
         </form>
 
