--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
     <div class="container">
-        <img class="logo" src="https://via.placeholder.com/50" alt="Logo">
+        <img class="logo" src="logo" alt="Logo">
         <h1>QCM Interactif</h1>
         <form id="qcmForm">
             <div class="question">
@@ -97,14 +97,61 @@
                 </div>
             </div>
             <div class="question">
-                <p>1. Quelle est la capitale de la France ?</p>
+                <p>4. Quelle est la capitale de la France ?</p>
                 <div class="options">
                     <label><input type="radio" name="q1" value="Paris"> Paris</label>
                     <label><input type="radio" name="q1" value="Londres"> Londres</label>
                     <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
                 </div>
             </div>
-            
+            <div class="question">
+                <p>5. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            <div class="question">
+                <p>6. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            <div class="question">
+                <p>7. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            <div class="question">
+                <p>8. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            <div class="question">
+                <p>9. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
+            <div class="question">
+                <p>10. Quelle est la capitale de la France ?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
+                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
+                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                </div>
+            </div>
             <button type="button" class="button" onclick="calculateScore()">Voir le résultat</button>
         </form>
 
