--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
     <div class="container">
-        <img class="logo" src="logo" alt="Logo">
+        <img class="logo" src="logo.png" alt="Logo">
         <h1>QCM Interactif</h1>
         <form id="qcmForm">
             <div class="question">
