--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QCM Interactif</title>
+    <title>QCM Métallerie</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,9 +26,12 @@
         }
         .logo {
             position: absolute;
-            top: 100px;
-            left: 100px;
-            width: 500px;
+            top: 10px;
+            left: 10px;
+            width: 50px;
+            width: 100px;
+            height: auto; /* Conserve les proportions de l'image */
+
         }
         h1 {
             color: #333;
