--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 1000vh;
+            height: auto;
             background-color: #f4f4f9;
         }
         .container {
