--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: auto;
+            height: 100hv;
             background-color: #f4f4f9;
         }
         .container {
@@ -23,6 +23,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
+            height: auto;
         }
         .logo {
             position: absolute;
