--- a/index.html
+++ b/index.html
@@ -165,13 +165,21 @@
     <script>
         function calculateScore() {
             var score = 0;
-            var totalQuestions = 3;
+            var totalQuestions = 10;
 
             // Correct answers
             var answers = {
                 q1: "Paris",
                 q2: "4",
-                q3: "Bleu"
+                q3: "Bleu",
+                q4: "Paris",
+                q5: "Paris",
+                q6: "Paris",
+                q7: "Paris",
+                q8: "Paris",
+                q9: "Paris",
+                q10: "Paris",
+
             };
 
             // Get form values
