--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <h1>QCM Interactif</h1>
         <form id="qcmForm">
             <div class="question">
-                <p>1. Quelle est la capitale de la France ?</p>
+                <p>1. Que fabriqué le serrurier au moyen âge en plus des serrures ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q1" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q1" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q1" value="des armes"> Paris</label>
+                    <label><input type="radio" name="q1" value="des grilles"> Londres</label>
+                    <label><input type="radio" name="q1" value="des outils"> Madrid</label>
                 </div>
             </div>
             <div class="question">
@@ -169,7 +169,7 @@
 
             // Correct answers
             var answers = {
-                q1: "Paris",
+                q1: "des grilles",
                 q2: "4",
                 q3: "Bleu",
                 q4: "Paris",
