--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="question">
                 <p>1. Que fabriqué le serrurier au moyen âge en plus des serrures ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q1" value="des armes"> Paris</label>
-                    <label><input type="radio" name="q1" value="des grilles"> Londres</label>
-                    <label><input type="radio" name="q1" value="des outils"> Madrid</label>
+                    <label><input type="radio" name="q1" value="des armes"> desarmes</label>
+                    <label><input type="radio" name="q1" value="des grilles"> desgrilles</label>
+                    <label><input type="radio" name="q1" value="des outils"> desoutils</label>
                 </div>
             </div>
             <div class="question">
