--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="options">
                     <label><input type="radio" name="q1" value="des armes"> des armes</label>
                     <label><input type="radio" name="q1" value="des grilles"> des grilles</label>
-                    <label><input type="radio" name="q1" value="des outils"> des outils</label>
+                    <label><input type="radio" name="q1" value="des structures métalliques"> des structures métalliques</label>
                 </div>
             </div>
             <div class="question">
@@ -169,7 +169,7 @@
 
             // Correct answers
             var answers = {
-                q1: "des grilles",
+                q1: "des structures métalliques",
                 q2: "4",
                 q3: "Bleu",
                 q4: "Paris",
