--- a/index.html
+++ b/index.html
@@ -81,79 +81,60 @@
                 <div class="options">
                     <label><input type="radio" name="q1" value="des armes"> des armes</label>
                     <label><input type="radio" name="q1" value="des grilles"> des grilles</label>
-                    <label><input type="radio" name="q1" value="des structures métalliques"> des structures métalliques</label>
+                    <label><input type="radio" name="q1" value="des structures métalliques de mise en sécurité"> des structures métalliques de mise en sécurité</label>
                 </div>
             </div>
             <div class="question">
-                <p>2. Combien fait 2 + 2 ?</p>
+                <p>2. A qu'elle époque est découverte la soudure</p>
                 <div class="options">
-                    <label><input type="radio" name="q2" value="3"> 3</label>
-                    <label><input type="radio" name="q2" value="4"> 4</label>
-                    <label><input type="radio" name="q2" value="5"> 5</label>
+                    <label><input type="radio" name="q2" value="20ème"> 20ème</label>
+                    <label><input type="radio" name="q2" value="19ème"> 19ème</label>
+                    <label><input type="radio" name="q2" value="21ème"> 21ème</label>
                 </div>
             </div>
             <div class="question">
-                <p>3. Quelle est la couleur du ciel ?</p>
+                <p>3. A la renaissaisence comment la métallerie se developpe t'elle </p>
                 <div class="options">
-                    <label><input type="radio" name="q3" value="Bleu"> Bleu</label>
-                    <label><input type="radio" name="q3" value="Rouge"> Rouge</label>
-                    <label><input type="radio" name="q3" value="Vert"> Vert</label>
+                    <label><input type="radio" name="q3" value="artistiquement"> artistiquement</label>
+                    <label><input type="radio" name="q3" value="techniquement"> techniquement</label>
+                    <label><input type="radio" name="q3" value="au niveau des matériaux"> au niveau des matériaux</label>
                 </div>
             </div>
             <div class="question">
-                <p>4. Quelle est la capitale de la France ?</p>
+                <p>4. comment le métallier fait il ses assamblage ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q4" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q4" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q4" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q4" value="avec des outils manuelle etdes machines spécialisé"> avec des outils manuelle etdes machines spécialisé</label>
+                    <label><input type="radio" name="q4" value="avec du beton"> avec des marteaux</label>
+                    <label><input type="radio" name="q4" value="avec de la colle"> avec de la colle</label>
                 </div>
             </div>
             <div class="question">
-                <p>5. Quelle est la capitale de la France ?</p>
+                <p>5. dans qu'elle secteur se trouve la métallerei ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q5" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q5" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q5" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q5" value="la restauration"> la restauration</label>
+                    <label><input type="radio" name="q5" value="dans des bureaux "> dans des bureaux </label>
+                    <label><input type="radio" name="q5" value="dans le btp"> dans le btp</label>
                 </div>
             </div>
             <div class="question">
-                <p>6. Quelle est la capitale de la France ?</p>
+                <p>6. es- tu sûr de trouver du travail ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q6" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q6" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q6" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q6" value="oui"> oui</label>
+                    <label><input type="radio" name="q6" value="non"> non</label>
                 </div>
             </div>
             <div class="question">
-                <p>7. Quelle est la capitale de la France ?</p>
+                <p>7. comment la métallerie peut participer a l'écologies ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q7" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q7" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q7" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q7" value="des matériaux recyclé"> des matériaux recyclé</label>
+                    <label><input type="radio" name="q7" value="moins de temp sur les chantier"> moins de temp sur les chantier</label>
                 </div>
             </div>
             <div class="question">
-                <p>8. Quelle est la capitale de la France ?</p>
+                <p>8. l'impact de l'évolution du métiers sera plutot sur ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q8" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q8" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q8" value="Madrid"> Madrid</label>
-                </div>
-            </div>
-            <div class="question">
-                <p>9. Quelle est la capitale de la France ?</p>
-                <div class="options">
-                    <label><input type="radio" name="q9" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q9" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q9" value="Madrid"> Madrid</label>
-                </div>
-            </div>
-            <div class="question">
-                <p>10. Quelle est la capitale de la France ?</p>
-                <div class="options">
-                    <label><input type="radio" name="q10" value="Paris"> Paris</label>
-                    <label><input type="radio" name="q10" value="Londres"> Londres</label>
-                    <label><input type="radio" name="q10" value="Madrid"> Madrid</label>
+                    <label><input type="radio" name="q8" value="le savoir faire"> le savoir faire</label>
+                    <label><input type="radio" name="q8" value="la productivité"> la productivité</label>
                 </div>
             </div>
             <button type="button" class="button" onclick="calculateScore()">Voir le résultat</button>
@@ -169,16 +150,14 @@
 
             // Correct answers
             var answers = {
-                q1: "des structures métalliques",
-                q2: "4",
-                q3: "Bleu",
-                q4: "Paris",
-                q5: "Paris",
-                q6: "Paris",
-                q7: "Paris",
-                q8: "Paris",
-                q9: "Paris",
-                q10: "Paris",
+                q1: "des structures métalliques de mise en sécurité",
+                q2: "20ème ",
+                q3: "artistiquement",
+                q4: "avec des outils manuelle etdes machines spécialisé",
+                q5: "dans le btp",
+                q6: "oui",
+                q7: "des matériaux recyclé",
+                q8: "la productivité",
 
             };
 
