--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>QCM Interactif</h1>
         <form id="qcmForm">
             <div class="question">
-                <p>1. Que fabriqué le serrurier au moyen âge en plus des serrures ?</p>
+                <p>1. Que fabriquait le serrurier au Moyen-Âge en plus des serrures ?</p>
                 <div class="options">
                     <label><input type="radio" name="q1" value="des armes"> des armes</label>
                     <label><input type="radio" name="q1" value="des grilles"> des grilles</label>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="question">
-                <p>2. A qu'elle époque est découverte la soudure</p>
+                <p>2. A quelle époque est découverte la soudure ?</p>
                 <div class="options">
                     <label><input type="radio" name="q2" value="20ème"> 20ème</label>
                     <label><input type="radio" name="q2" value="19ème"> 19ème</label>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="question">
-                <p>3. A la renaissaisence comment la métallerie se developpe t'elle </p>
+                <p>3. A la Renaissance, comment la métallerie se developpe-t-elle ?</p>
                 <div class="options">
                     <label><input type="radio" name="q3" value="artistiquement"> artistiquement</label>
                     <label><input type="radio" name="q3" value="techniquement"> techniquement</label>
@@ -101,39 +101,39 @@
                 </div>
             </div>
             <div class="question">
-                <p>4. comment le métallier fait il ses assamblage ?</p>
+                <p>4. Comment le métallier fait-il ses assemblages ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q4" value="avec des outils manuelle etdes machines spécialisé"> avec des outils manuelle etdes machines spécialisé</label>
-                    <label><input type="radio" name="q4" value="avec du beton"> avec des marteaux</label>
+                    <label><input type="radio" name="q4" value="avec des outils manuels et des machines spécialisées"> avec des outils manuels et des machines spécialisées</label>
+                    <label><input type="radio" name="q4" value="avec du béton"> avec du béton</label>
                     <label><input type="radio" name="q4" value="avec de la colle"> avec de la colle</label>
                 </div>
             </div>
             <div class="question">
-                <p>5. dans qu'elle secteur se trouve la métallerei ?</p>
+                <p>5. Dans quel secteur se trouve la métallerie ?</p>
                 <div class="options">
                     <label><input type="radio" name="q5" value="la restauration"> la restauration</label>
                     <label><input type="radio" name="q5" value="dans des bureaux "> dans des bureaux </label>
-                    <label><input type="radio" name="q5" value="dans le btp"> dans le btp</label>
+                    <label><input type="radio" name="q5" value="dans le BTP"> dans le BTP</label>
                 </div>
             </div>
             <div class="question">
-                <p>6. es- tu sûr de trouver du travail ?</p>
+                <p>6. Es-tu sûr.e de trouver du travail ?</p>
                 <div class="options">
                     <label><input type="radio" name="q6" value="oui"> oui</label>
                     <label><input type="radio" name="q6" value="non"> non</label>
                 </div>
             </div>
             <div class="question">
-                <p>7. comment la métallerie peut participer a l'écologies ?</p>
+                <p>7. Comment la métallerie peut participer à l'écologie ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q7" value="des matériaux recyclé"> des matériaux recyclé</label>
-                    <label><input type="radio" name="q7" value="moins de temp sur les chantier"> moins de temp sur les chantier</label>
+                    <label><input type="radio" name="q7" value="des matériaux recyclés"> des matériaux recyclés</label>
+                    <label><input type="radio" name="q7" value="moins de temps sur les chantiers"> moins de temps sur les chantiers</label>
                 </div>
             </div>
             <div class="question">
-                <p>8. l'impact de l'évolution du métiers sera plutot sur ?</p>
+                <p>8. L'impact de l'évolution du métiers sera plutôt sur... ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q8" value="le savoir faire"> le savoir faire</label>
+                    <label><input type="radio" name="q8" value="le savoir-faire"> le savoir-faire</label>
                     <label><input type="radio" name="q8" value="la productivité"> la productivité</label>
                 </div>
             </div>
@@ -153,10 +153,10 @@
                 q1: "des structures métalliques de mise en sécurité",
                 q2: "20ème ",
                 q3: "artistiquement",
-                q4: "avec des outils manuelle etdes machines spécialisé",
-                q5: "dans le btp",
+                q4: "avec des outils manuels et des machines spécialisées",
+                q5: "dans le BTP",
                 q6: "oui",
-                q7: "des matériaux recyclé",
+                q7: "des matériaux recyclés",
                 q8: "la productivité",
 
             };
