--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="question">
-                <p>3. A la Renaissance, comment la métallerie se developpe-t-elle ?</p>
+                <p>3. A la Renaissance, comment la métallerie se développe-t-elle ?</p>
                 <div class="options">
                     <label><input type="radio" name="q3" value="artistiquement"> artistiquement</label>
                     <label><input type="radio" name="q3" value="techniquement"> techniquement</label>
@@ -146,12 +146,12 @@
     <script>
         function calculateScore() {
             var score = 0;
-            var totalQuestions = 10;
+            var totalQuestions = 8;
 
             // Correct answers
             var answers = {
                 q1: "des structures métalliques de mise en sécurité",
-                q2: "20ème ",
+                q2: "20ème",
                 q3: "artistiquement",
                 q4: "avec des outils manuels et des machines spécialisées",
                 q5: "dans le BTP",
