--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="question">
-                <p>2. A quelle époque est découverte la soudure ?</p>
+                <p>2. À quelle époque est découverte la soudure ?</p>
                 <div class="options">
                     <label><input type="radio" name="q2" value="20ème"> 20ème</label>
                     <label><input type="radio" name="q2" value="19ème"> 19ème</label>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="question">
-                <p>3. A la Renaissance, comment la métallerie se développe-t-elle ?</p>
+                <p>3. À la Renaissance, comment la métallerie se développe-t-elle ?</p>
                 <div class="options">
                     <label><input type="radio" name="q3" value="artistiquement"> artistiquement</label>
                     <label><input type="radio" name="q3" value="techniquement"> techniquement</label>
