--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f4f4f9;
         }
         .container {
@@ -23,13 +23,12 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            height: auto;
         }
         .logo {
             position: absolute;
             top: 10px;
             left: 10px;
-            width: 50px;
+            width: 100px;
             height: auto;
         }
         h1 {
@@ -173,11 +172,14 @@
                     const label = input.parentElement;
                     if (input.value === correctAnswer) {
                         label.classList.add('correct');
-                    } else if (input.value === selected) {
+                    } else if (input.checked) {
                         label.classList.add('incorrect');
                     }
                 });
             }
+
+            const resultDiv = document.getElementById('result');
+            resultDiv.textContent = "Correction terminée. Vérifiez les réponses marquées.";
         }
     </script>
 
