--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCM Métallerie</title>
-    <link rel="icon" href="logo.png" type="image/png">
+	<link rel="icon" href="logo.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -119,11 +119,11 @@
                 <div class="options">
                     <label><input type="radio" name="q5" value="la restauration"> la restauration</label>
                     <label><input type="radio" name="q5" value="dans des bureaux"> dans des bureaux</label>
-                    <label><input type="radio" name="q5" value="dans le BTP"> dans le BTP</label>
+                    <label><input type="radio" name="q5" value="dans le BTP et l'industrie"> dans le BTP et l'industrie</label>
                 </div>
             </div>
             <div class="question">
-                <p>6. Es-tu sûr.e de trouver du travail ?</p>
+                <p>6. est ce que j'ai une persepetective d'évolution en ayant juste un cap métallier?</p>
                 <div class="options">
                     <label><input type="radio" name="q6" value="oui"> oui</label>
                     <label><input type="radio" name="q6" value="non"> non</label>
@@ -156,7 +156,7 @@
                 q2: "20ème",
                 q3: "artistiquement",
                 q4: "avec des outils manuels et des machines spécialisées",
-                q5: "dans le BTP",
+                q5: "dans le BTP et l'industrie ",
                 q6: "oui",
                 q7: "des matériaux recyclés",
                 q8: "la productivité",
