--- a/index.html
+++ b/index.html
@@ -117,27 +117,27 @@
             <div class="question">
                 <p>5. Dans quel secteur se trouve la métallerie ?</p>
                 <div class="options">
-                    <label><input type="radio" name="q5" value="la restauration"> la restauration</label>
-                    <label><input type="radio" name="q5" value="dans des bureaux"> dans des bureaux</label>
+                    <label><input type="radio" name="q5" value="la restauration"> dans la restauration</label>
+                    <label><input type="radio" name="q5" value="dans des bureaux"> dans les bureaux</label>
                     <label><input type="radio" name="q5" value="dans le BTP et l'industrie"> dans le BTP et l'industrie</label>
                 </div>
             </div>
             <div class="question">
-                <p>6. est ce que j'ai une persepetective d'évolution en ayant juste un cap métallier?</p>
+                <p>6. Est-ce que j'ai une perspective d'évolution avec un cap métallier ?</p>
                 <div class="options">
                     <label><input type="radio" name="q6" value="oui"> oui</label>
                     <label><input type="radio" name="q6" value="non"> non</label>
                 </div>
             </div>
             <div class="question">
-                <p>7. Comment la métallerie peut participer à l'écologie ?</p>
+                <p>7. Comment la métallerie peut-elle participer à l'écologie ?</p>
                 <div class="options">
                     <label><input type="radio" name="q7" value="des matériaux recyclés"> des matériaux recyclés</label>
                     <label><input type="radio" name="q7" value="moins de temps sur les chantiers"> moins de temps sur les chantiers</label>
                 </div>
             </div>
             <div class="question">
-                <p>8. L'impact de l'évolution du métiers sera plutôt sur... ?</p>
+                <p>8. L'impact de l'évolution du métier sera sur :</p>
                 <div class="options">
                     <label><input type="radio" name="q8" value="le savoir-faire"> le savoir-faire</label>
                     <label><input type="radio" name="q8" value="la productivité"> la productivité</label>
