--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCM Métallerie</title>
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="logo1.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,7 +85,7 @@
 <body>
 
     <div class="container">
-        <img class="logo" src="logo.png" alt="Logo">
+        <img class="logo" src="logo1.png" alt="Logo">
         <h1>QCM Interactif</h1>
         <form id="qcmForm">
             <div class="question">
